<resources>
	<string name="facebook_app_id" translatable="false">301947823625448</string>
	<string name="facebook_application_id" translatable="false">@string/facebook_app_id</string>
	<string name="fb_login_protocol_scheme" translatable="false">fb301947823625448</string>
	<string name="facebook_login_protocol_scheme" translatable="false">@string/fb_login_protocol_scheme</string>
	<string name="ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
	<string name="app_name">CheapList</string>
	<string name="sign_out">Sign Out</string>
	<string name="category">Category</string>
	<string name="no_data_available">No data available</string>
	<string name="undo">Undo</string>
	<string name="added_to_shopping_list">Added to shopping list</string>
	<string name="removed_from_shopping_list">Removed from shopping list</string>
	<string name="widget_nothing_to_show">Nothing to show</string>
	<string name="nutrition_information">Nutrition information</string>
	<string name="manufacturer_information">Manufacturer information</string>
	<string name="energy">Energy</string>
	<string name="fat">Fat</string>
	<string name="saturatedFat">Saturated fat</string>
	<string name="carbs">Carbs</string>
	<string name="sugar">Sugar</string>
	<string name="protein">Protein</string>
	<string name="salt">Salt</string>
	<string name="shopping_list_menu_item">Shopping list</string>
	<string name="compare_menu_item">Compare</string>
	<string name="product_image">Product image</string>
	<string name="signed_in">Signed in!</string>
	<string name="sign_in_canceled">Sign in canceled</string>
	<string name="add_to_list_action">Add to shopping list action</string>
	<string name="remove_from_list_action">Remove from shopping list action</string>
	<string name="kcal"> kcal</string>
	<string name="gram"> g</string>
	<string name="filter">Filter</string>
	<string name="detailImageTransition">detailImageTransition</string>
	<string name="loading_data">Loading data.</string>
	<string name="remove">Remove</string>

	<string name="unknown_response">Unexpected onActivityResult response code</string>
	<string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
	<string name="sign_in_cancelled">Sign in cancelled</string>
	<string name="no_internet_connection">No internet connection</string>
	<string name="unknown_error">An unknown error occurred</string>
	<string name="search">Search</string>
	<string name="dont_download_images_from_the_internet">Don\'t download images from the
		internet</string>
	<string name="dont_download_images_from_the_internet_description">Disabling image download can
		greatly save network traffic</string>
	<string name="settings">Settings</string>
	<string name="merchant">Merchant: %s</string>
</resources>
