<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/searchMenuItem"
		android:icon="@drawable/ic_search"
		android:title="@string/search"
		app:actionViewClass="android.support.v7.widget.SearchView"
		app:showAsAction="always|collapseActionView" />
	<item
		android:id="@+id/compareFilterMenuItem"
		android:title="@string/filter"
		android:visible="false"
		app:showAsAction="always" />
	<item
		android:id="@+id/compareMenuItem"
		android:icon="@drawable/ic_compare"
		android:title="@string/compare_menu_item"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/shoppingListMenuItem"
		android:title="@string/shopping_list_menu_item"
		app:showAsAction="never" />
	<item
		android:id="@+id/sign_out_menu"
		android:title="@string/sign_out"
		app:showAsAction="never" />
</menu>