<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout android:id="@+id/fragmentDetailContainer"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.v4.widget.NestedScrollView
		android:id="@+id/detailScrollView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="4dp"
		>

		<android.support.v7.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:orientation="vertical">

				<TextView
					android:id="@+id/detailItemTitle"
					style="@style/TextAppearance.AppCompat.Headline"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					tools:text="detailItemTitle" />

				<View
					android:layout_width="match_parent"
					android:layout_height="2dp"
					android:layout_marginBottom="4dp"
					android:background="?selectableItemBackground" />

				<TextView
					android:id="@+id/detailPrice"
					style="@style/TextAppearance.AppCompat.Headline"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					tools:text="detailPrice" />

				<TextView
					android:id="@+id/detailPricePerUnit"
					style="@style/TextAppearance.AppCompat.Subhead"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					tools:text="detailPricePerUnit" />

				<android.support.v7.widget.AppCompatImageView
					android:id="@+id/detailImage"
					android:layout_width="match_parent"
					android:layout_height="250dp"
					android:contentDescription="@string/product_image"
					android:scaleType="fitCenter"
					android:transitionName="@string/detailImageTransition"
					tools:src="@color/primaryColor" />

				<TextView
					android:id="@+id/detailNutritionTitle"
					style="@style/TextAppearance.AppCompat.Subhead"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/nutrition_information" />

				<View
					android:layout_width="match_parent"
					android:layout_height="2dp"
					android:layout_marginBottom="4dp"
					android:background="?selectableItemBackground" />

				<LinearLayout
					android:id="@+id/detailNutritionInformation"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					android:orientation="vertical" />

				<TextView
					android:id="@+id/detailManufacturerTitle"
					style="@style/TextAppearance.AppCompat.Subhead"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/manufacturer_information" />

				<View
					android:layout_width="match_parent"
					android:layout_height="2dp"
					android:layout_marginBottom="4dp"
					android:background="?selectableItemBackground" />

				<TextView
					android:id="@+id/detailManufacturerInformation"
					style="@style/TextAppearance.AppCompat.Body1"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/no_data_available" />
			</LinearLayout>

		</android.support.v7.widget.CardView>
	</android.support.v4.widget.NestedScrollView>

	<android.support.design.widget.FloatingActionButton
		android:id="@+id/detailFab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="42dp"
		android:tint="@color/secondaryTextColor"
		app:layout_anchor="@id/detailScrollView"
		app:layout_anchorGravity="bottom|end"
		app:layout_behavior="hu.tvarga.cheaplist.ui.detail.QuickReturnFooterBehavior"
		app:srcCompat="@drawable/zzz_playlist_minus" />

</android.support.design.widget.CoordinatorLayout>